--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,12 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation "androidx.fragment:fragment-ktx:1.2.2"
 
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
 
     implementation 'ja.burhanrashid52:photoeditor:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.fenchtose.nocropper:nocropper:0.3.1'
+    implementation "dev.sasikanth:colorsheet:1.0.1"
 }
