--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,6 @@ dependencies {
 
     implementation 'ja.burhanrashid52:photoeditor:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.fenchtose.nocropper:nocropper:0.3.1'
+    implementation 'com.github.yalantis:ucrop:2.2.4'
     implementation "dev.sasikanth:colorsheet:1.0.1"
 }
