--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,12 +35,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation "androidx.fragment:fragment-ktx:1.2.2"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4'
 
     implementation 'com.google.android.material:material:1.2.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.7.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
 
     implementation 'ja.burhanrashid52:photoeditor:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
